# binary_operations

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
source/: binary_operations.cpp  binary_operations.hpp
unit_tests/: bit_state.cpp  invert_bits.cpp  main.cpp  setting_bits.cpp
